--- a/bower.json
+++ b/bower.json
@@ -1,27 +1,15 @@
 {
     "name": "modulex-menubutton",
     "author": "yiminghe <yiminghe@gmail.com>",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "http://github.com/kissyteam/menubutton.git"
-    },
-    "ignore": [
-        "**/*",
-        "!build/**/*",
-        "!lib/**/*",
-        "!meta/**/*",
-        "!index.js"
-    ],
     "dependencies": {
         "modulex": "*",
-        "modulex-feature": "modulex-feature#1.x",
-        "modulex-ua": "modulex-ua#1.x",
-        "modulex-button": "modulex-button#1.x",
-        "modulex-menu": "modulex-menu#1.x",
-        "modulex-component": "modulex-component#1.x"
+        "modulex-feature": "modulex/feature#1.x",
+        "modulex-ua": "modulex/ua#1.x",
+        "modulex-button": "modulex/button#1.x",
+        "modulex-menu": "modulex/menu#1.x",
+        "modulex-component": "modulex/component#1.x"
     },
     "devDependencies": {
-        "modulex-css": "modulex-css#1.x"
+        "modulex-css": "modulex/css#1.x"
     }
 }
